# pupil

./: .gitignore  Cargo.toml  atlas.hcl  clippy.toml  docker-compose.yaml  flake.nix  package-lock.json  package.json  rspack.config.mjs  schema.sql
benches/: 2025-06-08_21-36-26.json  2025-06-10_13-26-28.json
config/: development.yaml  production.yaml
flake-modules/: default.nix  dev-shells.nix  formatter.nix  nixpkgs.nix
i18n/en-US/: errors.ftl  main.ftl  primitives.ftl
i18n/uk-UA/: errors.ftl  main.ftl  primitives.ftl
migrations/: 20250428193606_create_users_table.sql  20250530165826_add_roles.sql  20250601212202_add_grades.sql  20250602162135_grades_primary_key.sql  20250605172618_add_tokens.sql  atlas.sum
src/: config.rs  context.rs  error.rs  lib.rs  telemetry.rs  template.rs
src/app/: auth.rs  error.rs  grades.rs  keys.rs  localization.rs  mod.rs  performance.rs  validation.rs
src/context/: hasher.rs  localizer.rs  mod.rs  template.rs  template_engine.rs
src/context/database/: auth.rs  mod.rs
src/database/: mod.rs
src/domain/: action.rs  auth.rs  email.rs  error.rs  grade.rs  grades.rs  id.rs  key.rs  keys.rs  login.rs  mod.rs  name.rs  password.rs  percentile.rs  performance.rs  role.rs  signature.rs  signup.rs  subject_id.rs  subject_title.rs  token.rs  user_id.rs  verifying_key.rs
src/http/: auth.rs  error.rs  grades.rs  keys.rs  mod.rs  performance.rs  response.rs  static_files.rs  view.rs
src/http/middleware/: auth.rs  error.rs  json.rs  localization.rs  mod.rs  not_found.rs  panic.rs  query.rs  response.rs  response_type.rs  template.rs  view.rs
src/services/: hasher.rs  id_encoder.rs  localizer.rs  mod.rs  signer.rs  templating_engine.rs  token_issuer.rs
src/services/database/: auth.rs  grades.rs  keys.rs  mod.rs  performance.rs
templates/: auth-token.html  base.html  error.html  grade-add.html  index.html  login.html  profile-link.html  signup.html  student-grades.html  teacher-grades.html
templates/components/: bearer-auth.html  error.html  form.html  grade-edit.html  grade.html  header.html  keys.html  theme-controller.html
web/: index.css  index.js
