[package]
name = "pupil"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", default-features = false, features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.219", features = ["derive"] }
erased-serde = "0.4.6"
serde_json = "1.0.140"

anyhow = "1.0.97"
thiserror = "2.0.12"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "catch-panic", "trace"] }

tera = "1.20.0"

sqlx = { version = "0.8.5", default-features = false, features = ["derive", "runtime-tokio-rustls", "postgres"] }

config = "0.15.11"
strum = { version = "0.27.1", features = ["derive"] }
serde-aux = "4.6.0"
secrecy = { version = "0.10.3", features = ["serde"] }
email_address = { version = "0.2.9", default-features = false }
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }

trait-set = "0.3.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug", "Into"] }
async_fn_traits = "0.1.1"
